--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -6,7 +6,10 @@
 @import "_atoms/figures";
 
 @import "_molecules/navigation";
+@import "_molecules/forms";
 @import "_molecules/accordions";
+@import "_molecules/cards";
 
 @import "_organisms/headers";
 @import "_organisms/footers";
+@import "_organisms/banners";
