--- a/css/master.css
+++ b/css/master.css
@@ -703,10 +703,9 @@ blockquote {
   padding: 1rem;
   border: 1px solid #eeeeee; }
   blockquote p {
-    padding: 0 0 0.8rem;
-    font-weight: 600; }
+    padding: 0 0 0.5rem; }
     blockquote p cite {
-      padding: 0.8rem 0 0;
+      padding: 0.5rem 0 0;
       font-size: 0.8rem; }
   blockquote p:last-child {
     padding: 0; }
