--- a/v2/css/_global/_colors.scss
+++ b/v2/css/_global/_colors.scss
@@ -33,6 +33,9 @@ $valid: #008000;
 .bg-primary {background-color: $primary;}
 .bg-secondary {background-color: $secondary;}
 
+.bg-error {background-color: $error;}
+.bg-valid {background-color: $valid;}
+
 
 // SELECTION
 ::-moz-selection {
