--- a/v2/css/_organisms/_footers.scss
+++ b/v2/css/_organisms/_footers.scss
@@ -20,7 +20,7 @@ footer {
       }
     }
   }
-  section.meta-content {
+  section.brand-content {
     .logo {
       display: flex;
       flex-direction: column;
@@ -77,7 +77,7 @@ footer {
       width: 50%;
       ul li {text-align: left;}
     }
-    section.meta-content {
+    section.brand-content {
       width: 50%;
       .logo {padding: 0 0 1rem;}
     }
