--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -4,11 +4,15 @@
 
 @import "_atoms/buttons";
 @import "_atoms/figures";
+@import "_atoms/chips";
 
 @import "_molecules/navigation";
 @import "_molecules/forms";
 @import "_molecules/accordions";
 @import "_molecules/cards";
+@import "_molecules/blockquotes";
+@import "_molecules/media-grid-items";
+@import "_molecules/messages";
 
 @import "_organisms/headers";
 @import "_organisms/footers";
