--- a/v2/style/layout/layout.html
+++ b/v2/style/layout/layout.html
@@ -126,7 +126,7 @@
           <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
       </nav>
-      <section class="meta-content">
+      <section class="brand-content">
         <div class="logo">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
           <h2 class="center">The Delta Design System</h2>
