--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -5,6 +5,7 @@
 @import "_atoms/buttons";
 @import "_atoms/figures";
 @import "_atoms/chips";
+@import "_atoms/badges";
 
 @import "_molecules/navigation";
 @import "_molecules/forms";
@@ -17,3 +18,4 @@
 @import "_organisms/headers";
 @import "_organisms/footers";
 @import "_organisms/banners";
+@import "_organisms/tabs";
