--- a/v2/css/master.css
+++ b/v2/css/master.css
@@ -1336,11 +1336,11 @@ blockquote:before {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     color: #ffffff;
-    -webkit-transform: translateY(-10rem);
-    -moz-transform: translateY(-10rem);
-    -ms-transform: translateY(-10rem);
-    -o-transform: translateY(-10rem);
-    transform: translateY(-10rem);
+    -webkit-transform: translateY(-100rem);
+    -moz-transform: translateY(-100rem);
+    -ms-transform: translateY(-100rem);
+    -o-transform: translateY(-100rem);
+    transform: translateY(-100rem);
     -webkit-transition: all 0.5s ease-in-out 0s;
     -moz-transition: all 0.5s ease-in-out 0s;
     -ms-transition: all 0.5s ease-in-out 0s;
@@ -1407,11 +1407,11 @@ blockquote:before {
   .messages.bottom .error, .messages.bottom .success, .messages.bottom .confirm {
     top: auto;
     bottom: 0;
-    -webkit-transform: translateY(10rem);
-    -moz-transform: translateY(10rem);
-    -ms-transform: translateY(10rem);
-    -o-transform: translateY(10rem);
-    transform: translateY(10rem); }
+    -webkit-transform: translateY(100rem);
+    -moz-transform: translateY(100rem);
+    -ms-transform: translateY(100rem);
+    -o-transform: translateY(100rem);
+    transform: translateY(100rem); }
   .messages.bottom .error.show, .messages.bottom .success.show, .messages.bottom .confirm.show {
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
@@ -1677,48 +1677,69 @@ footer {
   .bg-photo.fixed {
     background-attachment: fixed; } }
 
-/*
-ul.tabs {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  width: 100%;
-  overflow-x: scroll;
-  padding: 1rem 0 0;
-  @include font-bold;
-  font-size: 0.8rem;
-  li {
-    width: auto;
-    margin: 0;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    cursor: pointer;
-    @include transition(all, 0.25s, ease);
-  }
-  li:hover, li:focus {background-color: $lt-gray;}
-  li a, li a:hover, li a:focus {
-    color: $black;
-    text-decoration: none;
-  }
-}
-
-.tab-row {
+.tabs {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  flex-direction: column;
+  position: relative;
   width: 100%;
-  .tab {
-    width: 0;
-    height: 0;
-    @include transform(scale(0));
-    @include transition(all, 0.25s, ease);
-  }
-  .tab.show {
+  margin: 0;
+  padding: 1rem 0 0; }
+  .tabs ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    @include transform(scale(1));
-  }
-}
-*/
+    margin: 0;
+    padding: 0; }
+    .tabs ul li {
+      flex-direction: column;
+      justify-content: center;
+      width: auto;
+      padding: 1rem 1.5rem;
+      border-right: 1px solid #cccccc;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700;
+      font-size: 0.8rem;
+      line-height: 1.3;
+      text-align: center;
+      color: #df3a32;
+      cursor: pointer;
+      -webkit-transition: all 0.5s ease 0s;
+      -moz-transition: all 0.5s ease 0s;
+      -ms-transition: all 0.5s ease 0s;
+      -o-transition: all 0.5s ease 0s;
+      transition: all 0.5s ease 0s; }
+      .tabs ul li svg {
+        margin: 0 auto 0.5rem;
+        fill: #df3a32; }
+    .tabs ul li:hover, .tabs ul li:focus, .tabs ul li.active {
+      color: #003442; }
+      .tabs ul li:hover svg, .tabs ul li:focus svg, .tabs ul li.active svg {
+        fill: #003442; }
+    .tabs ul li:last-of-type {
+      border-right: none; }
+  .tabs .tab-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start; }
+    .tabs .tab-group .tab {
+      width: 0;
+      height: 0;
+      -webkit-transform: scale(0);
+      -moz-transform: scale(0);
+      -ms-transform: scale(0);
+      -o-transform: scale(0);
+      transform: scale(0);
+      -webkit-transition: all 0.5s ease 0s;
+      -moz-transition: all 0.5s ease 0s;
+      -ms-transition: all 0.5s ease 0s;
+      -o-transition: all 0.5s ease 0s;
+      transition: all 0.5s ease 0s; }
+    .tabs .tab-group .tab.active {
+      width: auto;
+      height: 100%;
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1); }
