--- a/v2/css/_molecules/_forms.scss
+++ b/v2/css/_molecules/_forms.scss
@@ -120,6 +120,7 @@ input:not(:placeholder-shown) + label {
   right: 0.5rem;
   width: 1.5rem;
   height: 3rem;
+  cursor: pointer;
   svg {
     position: absolute;
     right: 0;
