--- a/v2/css/master.scss
+++ b/v2/css/master.scss
@@ -9,6 +9,7 @@
 
 @import "_molecules/navigation";
 @import "_molecules/forms";
+@import "_molecules/search";
 @import "_molecules/accordions";
 @import "_molecules/cards";
 @import "_molecules/blockquotes";
