--- a/v2/css/_global/_typography.scss
+++ b/v2/css/_global/_typography.scss
@@ -105,6 +105,7 @@ ul.no-bullets {
 ol {list-style-type: decimal;}
 
 ul li, ol li {
+  position: relative;
   width: 100%;
   max-width: 39rem;
   padding: 0 0 1rem 0.25rem;
