--- a/v2/css/_organisms/_tabs.scss
+++ b/v2/css/_organisms/_tabs.scss
@@ -13,6 +13,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    list-style-type: none;
     li {
       flex-direction: column;
       justify-content: center;
